welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but identifier found.
if estFaceMur recule  ;
   ^Program:3: error: illegal start of simple expression
else avance; 
           ^